--- a/perinf/src/app/reverse/reverse.component.html
+++ b/perinf/src/app/reverse/reverse.component.html
@@ -1,18 +1,17 @@
 <div style="text-align:center">
-  
   </div>
   <div>
       <h1 style="text-align:center">
           修改信息
         </h1>
-    <form action="#" method="get">
-  
-       
+    <form action="#" method="get" #reverseForm="ngForm" name="angularForm">
     <label>姓名</label>
-    <input type="text" placeholder="请输入姓名" #name [(ngModel)]="data.name" [ngModelOptions]="{standalone: true}"/>
+    <input type="text" placeholder="请输入姓名" #name="ngModel" [(ngModel)]="data.name" [ngModelOptions]="{standalone: true}" required/>
     <br />
     <label>性别</label>
-    <input type="text" placeholder="请输入性别" #sex [(ngModel)]="data.sex" [ngModelOptions]="{standalone: true}"/>
+    <!-- <input type="text" placeholder="请输入性别" #sex [(ngModel)]="data.sex" [ngModelOptions]="{standalone: true}"/> -->
+    <input type="radio" value="男" name="sex" [(ngModel)]="data.sex" #sex />男
+    <input type="radio" value="女" name="sex" [(ngModel)]="data.sex" />女
     <br />
     <label>年龄</label>
     <input type="text" placeholder="请输入年龄" #age [(ngModel)]="data.age" [ngModelOptions]="{standalone: true}"/>
@@ -24,6 +23,7 @@
     <input type="text" placeholder="家庭住址" #address [(ngModel)]="data.address" [ngModelOptions]="{standalone: true}"/>
     <br />
     <!-- <button (click)="saveDate()">保存</button> -->
-    <input type="submit" value="保存" (click)="saveDate(name.value,sex.value,age.value,tel.value,address.value)" />
+    <input type="submit" value="保存" (click)="saveDate(name.value,sex.value,age.value,tel.value,address.value)" class="btn btn-success" 
+    [disabled]="!reverseForm.form.valid"/>
   </form>
   </div>
