--- a/perinf/src/app/edit/edit.component.html
+++ b/perinf/src/app/edit/edit.component.html
@@ -11,5 +11,5 @@
   <br />
   <span>住址:</span><span>{{edit.address}}</span>
   <br />
-  <button (click)="reversesave()" >编辑</button>
+  <button (click)="OnInputSaveClick()" >编辑</button>
 </div>
