--- a/perinf/src/app/reverse/reverse.component.html
+++ b/perinf/src/app/reverse/reverse.component.html
@@ -50,8 +50,8 @@
     </div>
     <br />
     <!-- <button (click)="saveDate()">保存</button> -->
-    <input type="submit" value="取消保存" (click)="onCancelInoutClick(name.value,sex.value,age.value,tel.value,address.value)"/>
-    <input type="submit" value="保存" (click)="onsavelInoutClicke(name.value,sex.value,age.value,tel.value,address.value)" class="btn btn-success" 
+    <input type="submit" value="取消保存" (click)="OnCancelInputClick(name.value,sex.value,age.value,tel.value,address.value)"/>
+    <input type="submit" value="保存" (click)="OnSaveInputClick(name.value,sex.value,age.value,tel.value,address.value)" class="btn btn-success" 
     [disabled]="!reverseForm.form.valid"/>
   </form>
   </div>
