--- a/perinf/src/app/first/first.component.html
+++ b/perinf/src/app/first/first.component.html
@@ -5,7 +5,7 @@
   <form action="#" method="get" #firstForm="ngForm" name="angularForm">
   <label>姓名</label>
   <input type="text" placeholder="请输入姓名" id="name" #name="ngModel" name="name" required [(ngModel)]="data.name"
-  required class="form-control" minlength="2" maxlength="10"/>
+  class="form-control" minlength="2" maxlength="10"/>
   <div *ngIf="name.invalid && (name.dirty || name.touched)"
     class="namealert alert-danger">
     <div *ngIf="name.errors.required">
