--- a/perinf/src/app/edit/edit.component.html
+++ b/perinf/src/app/edit/edit.component.html
@@ -12,4 +12,5 @@
   <span>住址:</span><span>{{edit.address}}</span>
   <br />
   <button (click)="OnInputSaveClick()" >编辑</button>
+  <button (click)="OnInputNewClick()" >新建</button>
 </div>
