--- a/perinf/src/app/app.component.html
+++ b/perinf/src/app/app.component.html
@@ -1,4 +1,6 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<app-first *ngIf="fir"></app-first>
-<app-edit *ngIf="ed"></app-edit>
-<app-reverse *ngIf="re"></app-reverse>
+<nav>
+    <a routerLink="/home">Home</a>
+    <a routerLink="/edit">Info</a>
+</nav>
+<router-outlet></router-outlet>
