--- a/perinf/src/app/app.component.html
+++ b/perinf/src/app/app.component.html
@@ -1,6 +1,6 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <nav>
     <a routerLink="/home">Home</a>
-    <a routerLink="/edit">Info</a>
+    <a (click)="onNavigated()">Info</a>
 </nav>
 <router-outlet></router-outlet>
