fix:路由守卫修改

--- a/perinf/src/app/first/first.component.html
+++ b/perinf/src/app/first/first.component.html
@@ -49,7 +49,7 @@
     </div>
   </div>
   <br />
-  <input type="submit" value="保存" (click)="OnSaveInputClick(name.value,sex.value,age.value,tel.value,address.value)" class="btn btn-success" 
+  <input type="submit" value="保存" (click)="onSaveInputClick(name.value,sex.value,age.value,tel.value,address.value)" class="btn btn-success" 
   [disabled]="!firstForm.form.valid"/>
 </form>
 </div>
