--- a/perinf/src/app/app.component.html
+++ b/perinf/src/app/app.component.html
@@ -2,5 +2,6 @@
 <nav>
     <a routerLink="/home">Home</a>
     <a (click)="onNavigated()">Info</a>
+    <a routerLink="/practice">练习</a>
 </nav>
 <router-outlet></router-outlet>
