--- a/perinf/src/app/practice/practice.component.html
+++ b/perinf/src/app/practice/practice.component.html
@@ -1,3 +1,5 @@
-<p>
-  practice works!
-</p>
+<nav>
+  <a routerLink="practiceone">练习一</a>
+  <a routerLink="practicetwo">练习二</a>
+</nav>
+<router-outlet></router-outlet>
