--- a/perinf/src/app/practice/practice.component.html
+++ b/perinf/src/app/practice/practice.component.html
@@ -1,5 +1,6 @@
 <nav>
   <a routerLink="practiceone">练习一</a>
   <a routerLink="practicetwo">练习二</a>
+  <a routerLink="practicethree">练习三</a>
 </nav>
 <router-outlet></router-outlet>
