--- a/perinf/src/app/practice/practice.component.css
+++ b/perinf/src/app/practice/practice.component.css
@@ -1,16 +1,13 @@
 nav{
-    width:200px;
-    margin: 0 auto;
+    width:305px;
+    margin: 20px auto 20px;
+    overflow: hidden;
 }
 nav a{
     background: sienna;
     text-decoration: none;
     font-size: 20px;
     color: seashell;
-}
-nav a:first-child{
-    float: left
-}
-nav a:last-child{
-    float: right
+    margin: 20px;
+    float: left;
 }
