--- a/perinf/src/app/practice/practice.component.html
+++ b/perinf/src/app/practice/practice.component.html
@@ -2,5 +2,6 @@
   <a routerLink="practiceone">练习一</a>
   <a routerLink="practicetwo">练习二</a>
   <a routerLink="practicethree">练习三</a>
+  <a routerLink="practicefour">练习四</a>
 </nav>
 <router-outlet></router-outlet>
