--- a/car-move-admin-master/src/app/share/components/link/to-generate-links/to-generate-links.component.less
+++ b/car-move-admin-master/src/app/share/components/link/to-generate-links/to-generate-links.component.less
@@ -54,3 +54,10 @@
     border: none;
     margin-top: 100px;
 }
+.erroralert{
+    position: absolute ;
+    top: 280px;
+    left: 53%;
+    color: red;
+    background: none;
+}
