--- a/car-move-admin-master/src/app/share/components/manage/manage-nav/manage-nav.component.less
+++ b/car-move-admin-master/src/app/share/components/manage/manage-nav/manage-nav.component.less
@@ -9,7 +9,17 @@
     background-color: whitesmoke;
     height: 100%;
 }
-p{  
+p{
     margin: 0;
     margin-left: 25px;
+    cursor: pointer;
+    font-weight: bold;
+    outline: none;
+}
+p:hover{
+    color: rgb(0, 121, 254);
+}
+.btn-active{
+    color: rgb(0, 121, 254);
+    font-weight: bold;
 }
