--- a/car-move-admin-master/src/app/share/components/link/generate-links/generate-links.component.less
+++ b/car-move-admin-master/src/app/share/components/link/generate-links/generate-links.component.less
@@ -12,6 +12,11 @@
 p{
   margin: 0;
   margin-left: 25px;
+  cursor: pointer;
+  font-weight: bold;
+}
+p:hover{
+  color: rgb(0, 121, 254);
 }
 .right-Breadcrumb{
   width: 100%;
@@ -37,6 +42,4 @@ p{
 }
 .btn-active{
   color: rgb(0, 121, 254);
-  font-weight: bold;
-  cursor: pointer;
 }
