--- a/car-move-admin-master/src/app/share/components/link/to-generate-links/to-generate-links.component.html
+++ b/car-move-admin-master/src/app/share/components/link/to-generate-links/to-generate-links.component.html
@@ -10,9 +10,12 @@
     <p class="history">生成链接</p>
     <div class="link">
       <span style="color:red;padding-right: 10px;">*</span><span>数量：</span>
-      <input type="text" class="text">
+      <input type="text" class="text" [(ngModel)]="data">
+      <div *ngIf="hidden" class="erroralert">
+        请输入数量！
+      </div>
       <br>
-      <input type="button" value="生成并导出" class="button">
+      <a download="生成文件.xlsx" href="src/app/share/components/link/to-generate-links/生成文件.xlsx" (click)="onDownload()"><input type="button" value="生成并导出" class="button"></a>
     </div>
   </div>
 </div>
