--- a/car-move-admin-master/src/app/share/components/manage/manage-links/manage-links.component.html
+++ b/car-move-admin-master/src/app/share/components/manage/manage-links/manage-links.component.html
@@ -10,13 +10,13 @@
     <p class="history">数据筛选</p>
     <div class="link data-screen">
       <span>链接:</span>
-      <input type="text" class="text">
+      <input type="text" class="text" readonly>
       <span>手机号:</span>
-      <input type="text" class="text">
+      <input type="text" class="text" [(ngModel)]="tel" name="tel">
       <span>车牌号:</span>
-      <input type="text" class="text">
-      <input type="button" value="查询" class="query" />
-      <input type="button" value="重置" class="reset" />
+      <input type="text" class="text" [(ngModel)]="licensePlate" name="licensePlate">
+      <input type="button" value="查询" class="query" (click)="onBtnQuery()" />
+      <input type="button" value="重置" class="reset" (click)="onBtnReset()"/>
     </div>
   </div>
   <div class="data-list">
@@ -24,10 +24,10 @@
     <nz-table #borderedTable nzBordered [nzData]="dataSet">
       <thead>
         <tr>
-          <th>绑定时间</th>
+          <th>链接</th>
           <th>手机号</th>
           <th>车牌号</th>
-          <th>服务状态</th>
+          <th>启用</th>
           <th>操作</th>
         </tr>
       </thead>
@@ -36,8 +36,14 @@
           <td>{{data.link}}</td>
           <td>{{data.tel}}</td>
           <td>{{data.licensePlate}}</td>
-          <td><nz-switch [(ngModel)]="data.switchValue"></nz-switch></td>
-          <td>{{data.operation}}</td>
+          <td>
+            <nz-switch [(ngModel)]="data.switchValue"></nz-switch>
+          </td>
+          <td class="lastTd">
+            <span routerLink="/management/manage-nav/manage-see">查看</span>
+            <!-- <span routerLink="/management/manage-nav/manage-edit">编辑</span> -->
+            <span [routerLink]="['/management/manage-nav/manage-edit']" [queryParams]="{id:data.id}">编辑</span>
+          </td>
         </tr>
       </tbody>
     </nz-table>
