--- a/car-move-admin-master/src/app/share/components/manage/manage-links/manage-links.component.less
+++ b/car-move-admin-master/src/app/share/components/manage/manage-links/manage-links.component.less
@@ -1,6 +1,5 @@
 .right{
     width: 100%;
-    float: right;
 }
  .right-text{
    width: 80%;
@@ -66,4 +65,9 @@ input[type='button']{
    background: white;
    height: 700px;
    margin-top: 20px;
+}
+.lastTd span{
+    margin: 10px;
+    font-size: 12px;
+    color: #0079FE;
 }
