--- a/car-move-admin-master/src/app/share/components/manage/manage-nav/manage-nav.component.html
+++ b/car-move-admin-master/src/app/share/components/manage/manage-nav/manage-nav.component.html
@@ -1,7 +1,7 @@
 <div class="left">
   <nz-collapse>
     <nz-collapse-panel *ngFor="let panel of panels" [nzHeader]="panel.name" [nzActive]="panel.active" [nzDisabled]="panel.disabled">
-      <p (click)="routerLink()" [routerLink]="panel.router">{{panel.name}}</p>
+      <p (click)="routerLink()" [routerLink]="panel.router" [routerLinkActive]="['btn-active']">{{panel.name}}</p>
     </nz-collapse-panel>
   </nz-collapse>
 </div>
