--- a/perinf/src/app/practice/practice.component.html
+++ b/perinf/src/app/practice/practice.component.html
@@ -3,5 +3,6 @@
   <a routerLink="practicetwo">练习二</a>
   <a routerLink="practicethree">练习三</a>
   <a routerLink="practicefour">练习四</a>
+  <a routerLink="practicefive">练习五</a> 
 </nav>
 <router-outlet></router-outlet>
